--- a/source/notes/Sphinx-reST文档/环境安装笔记.rst
+++ b/source/notes/Sphinx-reST文档/环境安装笔记.rst
@@ -1,8 +1,8 @@
-环境安装笔记
-==============
+环境安装
+#########
 
-关于使用VScode实时预览reSturcturedText文档的配置
-------------------------------------------------
+关于使用VScode实时预览reSturcturedText文档的记录
+***************************************************
 
 通过安装 ``Esbonio`` 插件即可实现实时预览，语法纠错，文档间关系构建提醒等等。
 
