修改笔记区结构，更新笔记
1. 修改笔记区结构
2. 更新笔记

--- a/source/notes/Sphinx-reST文档/环境安装笔记.rst
+++ b/source/notes/Sphinx-reST文档/环境安装笔记.rst
@@ -6,7 +6,7 @@
 
 通过安装 ``Esbonio`` 插件即可实现实时预览，语法纠错，文档间关系构建提醒等等。
 
-值得注意，此插件安装之后需要 **指定一个python环境**，然后VScode右下角会提示运行一个依赖库的安装任务，点击安装之后，\
+**值得注意:**  此插件安装之后需要 **指定一个python环境**，然后VScode右下角会提示运行一个依赖库的安装任务，点击安装之后，\
 稍后在控制台会打印类似如下消息: 
 
 .. 下面这个关键字可以填写console和batch
