--- a/source/notes/毒鸡汤小句子/小句子.rst
+++ b/source/notes/毒鸡汤小句子/小句子.rst
@@ -7,8 +7,24 @@
 
 
 
-1. 每次你选择拖延，你的未来就比原计划晚了一步，而那个本该拥有更好生活的自己，正在某个时空里等待，却永远等不到你兑现承诺。
-2. .
+#. .. admonition:: 立刻去做！
+    :class: tip
+
+    每次你选择拖延，你的未来就比原计划晚了一步，而那个本该拥有更好生活的自己，正在某个时空里等待，却永远等不到你兑现承诺。
 
 
+
+
+#. .. admonition:: 天下英雄真如过江之鲫吗?
+    :class: tip
+
+    | 大专杂役瑟缩角落，民办本科沉默不语，二本散修低垂头颅；
+    | 一本学子看向211宗门，眼神羡慕；211门生却削尖脑袋往985大宗门里挤；
+    | 当你侥幸考上末流985，你就会发现华五c9的光芒压的你喘不过气；
+    | 若你真问鼎华五，抬头看，京城中双日凌空；
+    | 或许天生圣体成就华夏同辈高位，走出了同辈无敌路，他们会告诉你，世界不止中国。
+    | 当你最终成为这一世最不折不扣的天才，你会发现欧拉，黎曼，
+    | 还有7岁因为想快点放学而创造求和公式的高斯，早已在山顶等候多时。
+
+    所谓：你不修行，见我如井中蛙观天上月；你若修行，见我如一粒蜉蝣见青天！
 
