更新小句子

--- a/source/notes/毒鸡汤小句子/小句子.rst
+++ b/source/notes/毒鸡汤小句子/小句子.rst
@@ -10,7 +10,8 @@
 #. .. admonition:: 立刻去做！
     :class: tip
 
-    每次你选择拖延，你的未来就比原计划晚了一步，而那个本该拥有更好生活的自己，正在某个时空里等待，却永远等不到你兑现承诺。
+    每次你选择拖延，你的未来就比原计划晚了一步，而那个本该拥有更好生活的自己，正在某个时空里等待，
+    却永远等不到你兑现承诺。
 
 
 
@@ -27,4 +28,15 @@
     | 还有7岁因为想快点放学而创造求和公式的高斯，早已在山顶等候多时。
 
     所谓：你不修行，见我如井中蛙观天上月；你若修行，见我如一粒蜉蝣见青天！
+
+
+
+#. .. admonition:: 关于手写信他们说
+    :class: tip
+
+    作家若泽·萨拉马戈说，电子邮件永远不会沾上泪水。
+    是的，它也不会让你看到写信者的停顿、修改，他的迟疑和自我否定。
+
+    (来源：共青团中央 2025年6月16日 推文：https://mp.weixin.qq.com/s/2fk0h7bIADbKs5ndUimoZw)
+
 
