--- a/source/notes/毒鸡汤小句子/小句子.rst
+++ b/source/notes/毒鸡汤小句子/小句子.rst
@@ -27,7 +27,7 @@
     | 当你最终成为这一世最不折不扣的天才，你会发现欧拉，黎曼，
     | 还有7岁因为想快点放学而创造求和公式的高斯，早已在山顶等候多时。
 
-    所谓：你不修行，见我如井中蛙观天上月；你若修行，见我如一粒蜉蝣见青天！
+    所谓：你不修行，见我如井中蛙观天上月；你若修行，见我如一粒蜉蝣叹青天！
 
 
 
